finish e2e test of lightning